--- a/index.html
+++ b/index.html
@@ -139,9 +139,33 @@
             });
         });
     </script>
+
+    <script>
+        AFRAME.registerComponent("alpha-video", {
+            init: function() {
+                this.materialLoaded = this.materialLoaded.bind(this);
+                console.log("init");
+                // wait until the material is ready
+                this.el.addEventListener("loaded", this.materialLoaded);
+            },
+            materialLoaded: function() {
+                // grab the material
+                let material = this.el.getObject3D("mesh").material;
+                console.log(material.map.format);
+
+                // swap the format
+                material.map.format = THREE.RGBAFormat;
+                material.map.needsUpdate = true;
+                console.log(material.map);
+            },
+            remove: function() {
+                this.el.removeEventListener("loaded", this.materialLoaded);
+            }
+        });
+    </script>
 </head>
 
-<body>
+<body style="margin : 0px; overflow: hidden;>
 <a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
     <a-assets>
@@ -212,10 +236,12 @@
     <!-- march vide plane -->
     <a-entity id="march_video_panel_1" material="shader: chromakey; transparent: true; src: #march_video; color: 0 0 0";
               geometry="primitive: plane; width:1.6; height:0.9;" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="false" play-on-click
+              alpha-video
     ></a-entity>
 
     <a-entity id="march_video_panel_2" material="shader: chromakey; transparent: true; src: #march_video2; color: 0 0 0";
               geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" scale="4 4 4" visible="false"
+              alpha-video
     ></a-entity>
 
 
