--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
                 videoEl.play();
 
                 setTimeout(function () {
-                    if (marker_march != 1)
-                        return;
-
                     var el2 = document.querySelector('#march_video_panel_2');
 
                     var videoEl2 = el2.getAttribute('material').src;
@@ -212,14 +209,12 @@
 
     <!-- march vide plane -->
     <a-entity id="march_video_panel_1" material="shader: chromakey; transparent: true; src: #march_video; color: 0 0 0";
-              geometry="primitive: plane; width:1.6; height:0.9;" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="false"
+              geometry="primitive: plane; width:1.6; height:0.9;" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="true"
               play-on-click
-              alpha-video
     ></a-entity>
 
     <a-entity id="march_video_panel_2" material="shader: chromakey; transparent: true; src: #march_video2; color: 0 0 0";
-              geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" scale="4 4 4" visible="false"
-              alpha-video
+              geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" scale="4 4 4" visible="true"
     ></a-entity>
 
 
