--- a/sampler.html
+++ b/sampler.html
@@ -68,8 +68,8 @@
 <body>
 <a-scene>
   <a-assets>
-    <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
-    <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
+    <video id="march_video" src="marker_data/3_march/tree_video_b.mp4" width="160" height="90" muted></video>
+    <video id="march_video2" src="marker_data/3_march/tree_video_b.mp4" width="160" height="90" muted></video>
   </a-assets>
 
   <a-camera>
